--- a/css/dHeader.css
+++ b/css/dHeader.css
@@ -8,6 +8,7 @@ header {
   justify-content: center;
   z-index: 900;
   overflow: hidden;
+  
 }
 
 #header-site-logo {
@@ -54,9 +55,63 @@ header {
   align-content: center;
   align-items: center;
   justify-content: center;
-  box-shadow: 0px 2px 5px 2px #00000050;
-  transition: 300ms ease-in-out;
+  box-shadow: 0px 4px 4px 4px #00000050;
+  z-index: 9003;
 }
+#desktopMenu-collapse-button::before {
+  content: "";
+  background-color: rgb(68, 76, 80);
+  width: 100%;
+  height: 100%;
+  border-radius: 100px;
+  position: absolute;
+  align-content: center;
+  align-items: center;
+  justify-content: center;
+  z-index: -2;
+  scale: 0%;
+}
+#desktopMenu-collapse-button::after {
+  content: "";
+  background-color: #38393b;
+  width: 100%;
+  height: 100%;
+  border-radius: 100px;
+  position: absolute;
+  align-content: center;
+  align-items: center;
+  justify-content: center;
+  z-index: -2;
+  scale:0%;
+}
+#desktopMenu-collapse-button:hover {
+  scale: 110%;
+  transition: 0.3s ease-in-out;
+  box-shadow: 0px 0px 0px 0px transparent;
+  #desktopMenu-collapse-btn-icon {
+  scale: 80%;
+  transition: 0.3s ease-in-out;
+  }
+  cursor: pointer;
+  box-shadow: 0px 4px 4px 4px #29293350;
+  background-color: #27262C;
+}
+#desktopMenu-collapse-button:hover::before {
+  scale: 85%;
+  transition: 0.4s ease-in-out;
+  box-shadow: 0px 4px 4px 4px #29293350;
+}
+#desktopMenu-collapse-button:hover::after {
+  scale: 70%;
+  transition: 0.5s ease-in-out;
+  
+}
+#desktopMenu-collapse-button:hover::after {
+  scale: 70%;
+  transition: 0.5s ease-in-out;
+  
+}
+
 #desktopMenu-open-button {
   display: none;
   background-color: #2c2b2e;
@@ -78,16 +133,6 @@ header {
   display: flex;
   width: 10px;
   height: 10px;
-}
-#desktopMenu-collapse-button:hover {
-  background-image: linear-gradient(
-    50deg,
-    #1b1a1a7a,
-    #0f0f0f92,
-    #1b1a1a94,
-    #0f0f0f94,
-    #2726266b
-  );
 }
 #desktop-menu {
   background-color: #0d0c0d8a;
@@ -172,7 +217,7 @@ header {
 }
 
 #theme {
-  color: #eeeeee;
+  color: #96A1B2;
   width: fit-content;
   height: fit-content;
   display: flex;
@@ -183,20 +228,22 @@ header {
   align-items: center;
   justify-content: center;
   z-index: 203;
-  padding: 10px 15px;
+  padding: 9px 15px;
   margin-left: 30px;
   border-radius: 20px;
   gap: 15px;
 }
 #theme:hover {
-  background-color: #a7a9b144;
-  border: 0.5px dashed transparent;
+  border: 0px dashed transparent;
+  background-color: #161616;
   #light-mode {
-    animation: spin 8s ease-in-out infinite;;
+    animation: spin 3s ease-in-out infinite;
   }
+  transition: 0.s ease-in-out;
+  cursor: pointer;
 }
 #theme p {
-  color: #fffbfb;
+  color: #96A1B2;
   width: fit-content;
   height: fit-content;
   display: flex;
@@ -463,4 +510,13 @@ header {
   40%  { transform: rotate(4deg); }
   50%  { transform: rotate(0deg); }
   100% { transform: rotate(0deg); }
+}
+
+@keyframes spin3d {
+  from {
+    transform: rotateY(0deg);
+  }
+  to {
+    transform: rotateY(360deg);
+  }
 }
